...
          onPress={placeOrder}
          style={[
            styles.button,
            { backgroundColor: data.length ? theme.primary : "#AAB5AC" },
          ]}
        >
          <Text style={styles.buttonText}>Place order</Text>
        </Pressable>
      </View>
    </View>
  );
}
const styles = StyleSheet.create({
...
